fix(scrollbar): Changed the visuals for the custom scrollbars.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -166,20 +166,20 @@ body {
 
 /* Custom Scrollbar */
 
-.wScroll::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #F5F5F5;
+
+.wScroll::-webkit-scrollbar-track, .wScroll::-webkit-scrollbar-track:horizontal {
+    background-color: #F2F3F4;
 }
 
-.wScroll::-webkit-scrollbar {
-    width: 10px;
-    background-color: #F5F5F5;
+.wScroll::-webkit-scrollbar,
+.wScroll::-webkit-scrollbar:horizontal {
+    width: 5px;
+    background-color: #F2F3F4;
 }
 
-.wScroll::-webkit-scrollbar-thumb {
-    background-color: #37556E;
-    border: 1px solid #555555;
-    border-radius: 4px;
+.wScroll::-webkit-scrollbar-thumb,
+.wScroll::-webkit-scrollbar-thumb:horizontal {
+    background-color: #E5E7E9;
 }
 
 
@@ -1125,7 +1125,9 @@ span.tabs-radio img.selected {
     font-family: 'Lekton';
 }
 
+
 /* Added deeper specification to avoid it auto-excepting itself */
+
 #mBB-portfolio .wavesTable tbody tr {
     color: #333333;
     font-family: 'Lekton';
